--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "vblog",
     "version": "1.0.0",
     "description": "A Vue.js project",
-    "author": "辣子鸡 <30425217+GitHub-Laziji@users.noreply.github.com>",
+    "author": "winrh <30425217+GitHub-Laziji@users.noreply.github.com>",
     "private": true,
     "scripts": {
-        "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
+        "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 127.0.0.1",
         "start": "npm run dev",
         "unit": "jest --config test/unit/jest.conf.js --coverage",
         "e2e": "node test/e2e/runner.js",
