--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vblog",
     "version": "1.0.0",
     "description": "A Vue.js project",
-    "author": "winrh <30425217+GitHub-Laziji@users.noreply.github.com>",
+    "author": "winrh <30425217+winrh@users.noreply.github.com>",
     "private": true,
     "scripts": {
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 127.0.0.1",
