--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,5 +1,5 @@
 {
-    "githubUsername": "winrh",
+    "githubUsername": "winRh",
     "blogTitle": "winrh",
     "blogDescribe": "欢迎来到winrh的博客",
     "htmlTitle": "winrh的博客",
